--- a/Content/Topics/Price Planning/Creating Price Actions.htm
+++ b/Content/Topics/Price Planning/Creating Price Actions.htm
@@ -46,7 +46,7 @@
                         Start Date  
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
-                        Select a future date that the price action will set new product pricing. The system will default and restrict to no earlier than the start date. 
+                        Select a future date that the price action sets new product pricing. The system will default and restrict to no earlier than the start date. 
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
@@ -54,7 +54,7 @@
                         Strategy  
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
-                       The price action Strategy determines the fields to be used for user input, how the pricing is calculated and validated based on the priority of Price Strategy Rules and the types of validation failed severities configured to determine pricing. 
+                       The price action strategy determines the fields to be used for user input, how the pricing is calculated and validated based on the priority of Price Strategy Rules and the types of validation failed severities configured to determine pricing. 
                         <p class="BasicNote">The strategies available to be selected are filtered based on the Price Action Strategy’s restricted User and Role access. </p></td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
@@ -80,7 +80,7 @@
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyB-Column1-Body1">Price Matrix</td>
                     <td class="TableStyle-standard-BodyA-Column2-Body1">
-                         Optional. If the Plan is configured to use a Price Matrix, then this field allows the Price Matrix to be changed or removed from a Price Action. 
+                         Optional. If the plan is configured to use a price matrix, then this field allows the price matrix to be changed or removed from a price action. 
                         <p class="BasicNote">This field displays if system policy <span class="Emphasis">Default Pricing Plan Price Matrix Usage</span> is set to <span class="Emphasis">True</span>.</p></td>
                 </tr>
             </tbody>
