--- a/Content/Topics/Price Planning/Including or Excluding Sites.htm
+++ b/Content/Topics/Price Planning/Including or Excluding Sites.htm
@@ -3,7 +3,7 @@
     <head><title></title>
     </head>
     <body>
-        <h1>Excluding or re-including sites and site clusters in a pricing plan</h1>
+        <h1>Excluding or re-including sites and site clusters in pricing plans</h1>
         <p> Sites can be excluded from or re-included in plans even after price actions have been created. This does not change existing price actions. However, new price actions will have the sites excluded or re-included.</p>
         <p>To include or exclude sites or site clusters in a pricing plan, navigate to the <span class="Emphasis">Sites</span> pane on the plan’s <span class="Emphasis">Information</span> tab. </p>
         <p>
