--- a/Content/Topics/Price Planning/Price Calculations tab.htm
+++ b/Content/Topics/Price Planning/Price Calculations tab.htm
@@ -1,9 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
     <head>
-        <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" />
-        <title>
-        </title>
+        <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" /><title></title>
     </head>
     <body>
         <h1>Price calculations</h1>
@@ -13,7 +11,7 @@
         </p>
         <h2>Creating and maintaining calculations</h2>
         <p>Within the <span class="Emphasis">Price Calculations</span> screen, click <span class="Emphasis">New</span> to create a new Calculation or Calculation Rule, enter the required fields and click <span class="Emphasis">Save</span>. Modifications are made directly to the Calculation grid. </p>
-        <p class="BasicNote">Calculations cannot be deleted if associated to a Price Strategy and once deleted cannot be restored. </p>
+        <p class="BasicNote">Calculations cannot be deleted if associated to a price strategy and once deleted cannot be restored. </p>
         <h2>Calculation fields and descriptions</h2>
         <table class="TableStyle-standard" cellspacing="0" style="mc-table-style: url('../../Resources/TableStyles/standard.css');">
             <col style="width: 168px;" class="TableStyle-standard-Column-Column1" />
