Various content updates

--- a/Content/Topics/Allocations/Monte Carlo Re Trend Overview.htm
+++ b/Content/Topics/Allocations/Monte Carlo Re Trend Overview.htm
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
     <head>
-        <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" /><title></title>
     </head>
     <body>
         <h1>Monte Carlo Re-Trend Overview</h1>
@@ -80,7 +79,7 @@
                 </tr>
             </tbody>
         </table>
-        <h2>System policies</h2>
+        <h2>System policies specific to PID</h2>
         <p>There are several system policies specific to PID. There are also re-trend system policies that are used for both re-trend methods, which can be found below:</p>
         <ul>
             <li>Forecast Model - Maximum Forward Horizon Days</li>
