--- a/Content/Topics/Assortment Planning/Managing Plans and Set Defaults.htm
+++ b/Content/Topics/Assortment Planning/Managing Plans and Set Defaults.htm
@@ -25,7 +25,7 @@
         <h2>Delete</h2>
         <p>Deletes the selected assortment plan. </p>
         <h2>User Access</h2>
-        <p>Launches the <span class="Emphasis">Manage Access</span> view for the selected plan. Access can be set at the User level or by Role with roles being assigned as users are added to the system.</p>
+        <p>Launches the <span class="Emphasis">Manage Access</span> view for the selected plan. Access can be set at the user level or by role with roles being assigned as users are added to the system.</p>
         <p>The Product and Site Hierarchy access levels available is dependent on the corresponding parameter selections for the assortment plan.</p>
         <p>The <span class="Emphasis">Select All</span> and <span class="Emphasis">Select None</span> buttons in the <span class="Emphasis">Product</span> and <span class="Emphasis">Site</span> fields in the upper portion of the view can be used to quickly apply or remove complete access to all available Product or Site hierarchy levels within the plan without having to interact with the bottom portion of the dialog.</p>
         <h3>Buttons</h3>
