--- a/Content/Topics/Inventory Forecasts/FC vs TY Demand Exceptions.htm
+++ b/Content/Topics/Inventory Forecasts/FC vs TY Demand Exceptions.htm
@@ -35,12 +35,12 @@
         <h3>To filter for forecasts with FC vs TY&#160;Demand <i>over-forecast</i> exceptions</h3>
         <p>Select the following from the <span class="Emphasis">Level Forecast Exceptions</span> field group:</p>
         <ul>
-            <li><span class="Emphasis">Level Forecast Forecast Sales Ratio</span> is more or equal to <span class="Emphasis">3</span> (or whatever positive percentage value is be the threshold).</li>
+            <li><span class="Emphasis">Level Forecast Forecast Sales Ratio</span> is more or equal to  whatever positive percentage value is be the threshold.</li>
             <li><span class="Emphasis">Level Forecast Reviewed</span> is <span class="Emphasis">False</span>.</li>
         </ul>
         <h3>To filter for forecasts with FC vs TY Demand <i>under-forecast</i> exceptions</h3>
         <ul>
-            <li><span class="Emphasis">Level Forecast Forecast Sales Ratio</span> is smaller or equal to <span class="Emphasis">-0.75</span> (or whatever negative percentage value is to be the threshold).</li>
+            <li><span class="Emphasis">Level Forecast Forecast Sales Ratio</span> is smaller or equal to whatever negative percentage value is to be the threshold.</li>
             <li><span class="Emphasis">Level Forecast Reviewed</span> is <span class="Emphasis">False</span></li>
         </ul>
         <h2>Reviewing and resolving FC vs TY&#160;Demand exceptions</h2>
