--- a/Content/Topics/Inventory Forecasts/Model Fit Exceptions.htm
+++ b/Content/Topics/Inventory Forecasts/Model Fit Exceptions.htm
@@ -5,8 +5,7 @@
     <body>
         <h1>Model fit exceptions</h1>
         <p>The Model Fit exception flags level forecasts where the MAPE (Mean Average Percentage Error) calculated by the Forecast engine is less than the specified threshold for acceptable model fit. </p>
-        <h2>Example</h2>
-        <p>The following example shows a forecast with a model fit of only 7.08%.</p>
+        <p>The following example shows a forecast with a model fit of only 1.923%.</p>
         <p>
             <img src="../../Resources/Images/Exceptions/Forecasting/Example - model fit.png" class="LargeImages" />
         </p>
@@ -14,7 +13,7 @@
         <p>To filter for forecasts with Model Fit exceptions, select:</p>
         <ul>
             <ul>
-                <li><span class="Emphasis">Demand Planning</span> &gt;  <span class="Emphasis">Level Forecast - Method Fit</span> is smaller or equal to <span class="Emphasis">30</span> (or whatever percentage value is to be the threshold).</li>
+                <li><span class="Emphasis">Demand Planning</span> &gt;  <span class="Emphasis">Level Forecast - Method Fit</span> is smaller or equal to whatever percentage value is to be the threshold.</li>
                 <li><span class="Emphasis">Level Forecast Exceptions</span> &gt; <span class="Emphasis">Level Forecast Reviewed</span> is <span class="Emphasis">False</span>.</li>
             </ul>
         </ul>
